deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: c4e-web-app
  name: c4e-web-app
  namespace: dev
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: c4e-web-app
  type: ClusterIP
